--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "chalk": "^2.1.0",
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.2.1",
+    "fs": "0.0.1-security",
+    "moment": "^2.18.1"
   }
 }
